frontend/tests/errors/ER-039/member_non_composite_operand/test.vx
// @rfc: docs/vexel-rfc.md#expressions--control
// @desc: Member access requires named or tuple values. | Reject member access on primitive values

&^main() -> #i32 {
    1.foo
}
